r: fix 'post_install'

--- a/CBI/r/Makefile
+++ b/CBI/r/Makefile
@@ -88,7 +88,7 @@ post_install:
 
 	## Configure R for Java (so that 'rJava' can be installed)
 	if module load openjdk/$(OPENJDK_VERSION) 2> /dev/null; then \
-	    [[ -z $${JAVA_HOME} ]] && { echo >&2 "ERROR: JAVA_HOME not set"; exit 1; } \
+	    [[ -n $${JAVA_HOME} ]] || { echo >&2 "ERROR: JAVA_HOME not set"; exit 1; } \
 	else \
 	    >&2 echo "WARNING: Failed to load module 'openjdk/$(OPENJDK_VERSION)'; leaving it to 'R CMD javareconf' to locate a proper Java version (JAVA_HOME)"; \
 	fi
