Add 'make m/<software> for re-installing modules

--- a/CBI/Makefile
+++ b/CBI/Makefile
@@ -1,7 +1,10 @@
 SHELL:=bash
 
 i/%:
-	cd "$(@F)"; make
+	cd "$(@F)"; make all
+
+m/%:
+	cd "$(@F)"; make module
 
 pkgs: PACKAGES
 	@cat PACKAGES | grep -vE "^#" | sort -u
