miniconda3-py39/4.12.0 + add version tests

--- a/CBI/wip-miniconda3/Makefile
+++ b/CBI/wip-miniconda3/Makefile
@@ -6,6 +6,7 @@ include ../utils.mk
 ## SOFTWARE
 ## ----------------------------------------------------------
 
+## See https://docs.conda.io/en/latest/miniconda.html
 $(DOWNLOAD_TARGET):
 	mkdir -p $(BUILD_PATH); \
 	cd $(BUILD_PATH); \
