--- a/CBI/proj/Makefile
+++ b/CBI/proj/Makefile
@@ -4,13 +4,11 @@ include ../utils.mk
 ## PROJ (>= 6.3.0) requires sqlite3 (>= 3.11)
 ifeq ($(VERSION_X_Y),6.3)
     CONFIG_MODULES=CBI sqlite
-    ## TODO: This is not sufficent. Figure out why configure still gives:
-    ##   Requested 'sqlite3 >= 3.11' but version of SQLite is 3.7.17
-    ## despite above module gives sqlite3 v3.32.3. /HB 2022-02-04
-#    $(error "STILL NOT SUPPORTED: Cannot install proj $(VERSION)")
+else ifeq ($(VERSION_X),7)
+    CONFIG_MODULES=CBI sqlite
+else ifeq ($(VERSION_X),8)
+    CONFIG_MODULES=CBI sqlite
 endif
-
-FOO=$(error "STILL NOT SUPPORTED: Cannot install proj $(VERSION)")
 
 
 ## ----------------------------------------------------------
