--- a/CBI/rstudio/Makefile
+++ b/CBI/rstudio/Makefile
@@ -4,7 +4,7 @@ include ../utils.mk
 VERSION_PLUS := $(shell echo "$(VERSION)" | sed -E 's/-([0-9]+)$$/+\1/g')
 VERSION_URL := $(shell echo "$(VERSION)" | sed 's/+/%2B/g')
 TARBALL=$(NAME)-$(VERSION_URL)-${ARCH}.tar.gz
-URL_ROOT=https://download1.rstudio.org/desktop
+URL_ROOT=https://download1.rstudio.org/electron
 URL=$(URL_ROOT)/centos7/x86_64/$(TARBALL)
 ifeq ($(ARCH),amd64-debian)
   URL=$(URL_ROOT)/bionic/amd64/$(TARBALL)
