--- a/CBI/bat/Makefile
+++ b/CBI/bat/Makefile
@@ -22,3 +22,6 @@ $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 	make post_install
 	ls -la $(PREFIX)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
+
+changelog-latest:
+	@curl --silent https://raw.githubusercontent.com/sharkdp/bat/master/CHANGELOG.md | grep -E "^# +v[[:digit:].]+" | head -n 1
