--- a/CBI/quarto/Makefile
+++ b/CBI/quarto/Makefile
@@ -20,3 +20,6 @@ $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 	make post_install
 	ls -la $(PREFIX)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
+
+changelog-latest:
+	@curl --head --silent https://github.com/quarto-dev/quarto-cli/releases/latest | grep -E "^location:"
