Add central 'make version' and 'make new-version-available'

--- a/CBI/Makefile
+++ b/CBI/Makefile
@@ -34,7 +34,7 @@ PACKAGES: FORCE
 changelog-urls:
 	grep -F "(changelog)" -- */module.lua.tmpl | sed 's/(changelog).*//' | sed -E 's|^(.+)/module.lua.tmpl:.*, |\1\t|'
 
-changelog-latest:
-	for ff in -- */config.mk; do dd=$$(dirname "$$ff"); grep -qE "^changelog-latest:" "$$dd/Makefile" && (printf "%s: " "$$dd"; cd "$$dd"; make changelog-latest 2> /dev/null); done
+new-version-available:
+	@for ff in -- */config.mk; do dd=$$(dirname "$$ff"); grep -qE "^available-version:" "$$dd/Makefile" && (cd "$$dd"; v=$$(make --quiet version); av=$$(make --quiet available-version); [[ $$av == $$v ]] && [[ -z "$(FULL)" ]] || echo "$$dd: $$v -> $$av"; ); done
 
 FORCE:
