--- a/CBI/bcftools/Makefile
+++ b/CBI/bcftools/Makefile
@@ -11,3 +11,6 @@ $(DOWNLOAD_TARGET):
 	cd $(BUILD_HOME); \
 	curl -L -O https://github.com/samtools/$(NAME)/releases/download/$(VERSION)/$(TARBALL); \
 	tar jxf $(TARBALL)
+
+available-version:
+	@curl --silent https://raw.githubusercontent.com/samtools/bcftools/develop/NEWS | grep -E "^#+ Release [[:digit:]]" | head -1 | sed -E 's/(^#+ Release *| .*)//g'
