Generic solution for 'available-version' when there are GitHub Releases

--- a/CBI/quarto/Makefile
+++ b/CBI/quarto/Makefile
@@ -4,6 +4,7 @@ include ../utils.mk
 ARCH=linux-amd64
 ARCH=linux-rhel7-amd64
 TARBALL=$(NAME)-$(VERSION)-$(ARCH).tar.gz
+GITHUB_REPO=https://github.com/quarto-dev/quarto-cli
 
 ## ----------------------------------------------------------
 ## SOFTWARE
@@ -11,7 +12,7 @@ TARBALL=$(NAME)-$(VERSION)-$(ARCH).tar.gz
 $(DOWNLOAD_TARGET):
 	mkdir -p $(BUILD_HOME); \
 	cd $(BUILD_HOME); \
-	curl -L -O https://github.com/quarto-dev/quarto-cli/releases/download/v$(VERSION)/$(TARBALL); \
+	curl -L -O $(GITHUB_REPO)/releases/download/v$(VERSION)/$(TARBALL); \
 	tar -xzf $(TARBALL)
 
 $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
@@ -22,4 +23,4 @@ $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
 
 available-version:
-	@curl --head --silent https://github.com/quarto-dev/quarto-cli/releases/latest | grep -E "^location:" | sed -E 's/.*v//'
+	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -E "^location:" | sed -E 's/.*v//'
