--- a/CBI/bedops/Makefile
+++ b/CBI/bedops/Makefile
@@ -2,6 +2,7 @@ include config.mk
 include ../utils.mk
 
 TARBALL=$(NAME)_linux_x86_64-v$(VERSION).tar.bz2
+GITHUB_REPO=https://github.com/bedops/$(NAME)
 
 ## ----------------------------------------------------------
 ## SOFTWARE
@@ -9,7 +10,7 @@ TARBALL=$(NAME)_linux_x86_64-v$(VERSION).tar.bz2
 $(DOWNLOAD_TARGET):
 	mkdir -p $(BUILD_PATH); \
 	cd $(BUILD_PATH); \
-	curl -L -O https://github.com/bedops/$(NAME)/releases/download/v$(VERSION)/$(TARBALL); \
+	curl -L -O $(GITHUB_REPO)/releases/download/v$(VERSION)/$(TARBALL); \
 	tar jxf $(TARBALL)
 
 $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
@@ -18,3 +19,6 @@ $(INSTALL_TARGET): $(DOWNLOAD_TARGET)
 	make post_install
 	ls -la $(PREFIX)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
+
+available-version:
+	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -E "^location:" | sed -E 's/.*v//'
