available-version for more tools

--- a/CBI/fzf/Makefile
+++ b/CBI/fzf/Makefile
@@ -3,6 +3,7 @@ include ../utils.mk
 
 
 TARBALL=$(VERSION).tar.gz
+GITHUB_REPO=https://github.com/junegunn/$(NAME)
 
 ## ----------------------------------------------------------
 ## SOFTWARE
@@ -10,7 +11,7 @@ TARBALL=$(VERSION).tar.gz
 $(DOWNLOAD_TARGET):
 	mkdir -p $(BUILD_HOME); \
 	cd $(BUILD_HOME); \
-	curl -L -O https://github.com/junegunn/$(NAME)/archive/$(TARBALL); \
+	curl -L -O $(GITHUB_REPO)/archive/$(TARBALL); \
 	tar zxf $(TARBALL)
 
 $(BUILD_TARGET): $(DOWNLOAD_TARGET)
@@ -23,3 +24,6 @@ $(INSTALL_TARGET): $(BUILD_TARGET)
 	make post_install
 	ls -la $(PREFIX)
 	@echo "SOFTWARE INSTALLED TO: $(PREFIX)"
+
+available-version:
+	@curl --head --silent $(GITHUB_REPO)/releases/latest | grep -E "^location:" | sed -E 's/.*(v|\/)//'
